kubernetes/pihole/base/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
    app.kubernetes.io/instance: pihole
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
spec:
  replicas: 1
  serviceName: pihole
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
      annotations:
        enable.version-checker.io/pihole: "true"
    spec:
      hostname: pihole
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 1.0.0.1
      containers:
        - image: docker.io/pihole/pihole:2024.07.0@sha256:0def896a596e8d45780b6359dbf82fc8c75ef05b97e095452e67a0a4ccc95377
          imagePullPolicy: IfNotPresent
          name: pihole
          securityContext:
            runAsNonRoot: false
            privileged: true
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          readinessProbe:
            exec:
              command: ["dig", "@127.0.0.1", "cloudflare.com"]
            initialDelaySeconds: 15
            timeoutSeconds: 20
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
          livenessProbe:
            tcpSocket:
              port: dns-tcp
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
              hostPort: 53
            - name: web
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: etc-pihole
              mountPath: /etc/pihole
            - name: etc-dnsmasq
              mountPath: /etc/dnsmasq.d
            - name: wildcard-dns
              mountPath: "/etc/dnsmasq.d/02-my-wildcard-dns.conf"
              subPath: "02-my-wildcard-dns.conf"
            - mountPath: /dev/shm
              name: dshm
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 128Mi
      automountServiceAccountToken: false
      serviceAccountName: pihole
      volumes:
        - name: etc-pihole
          persistentVolumeClaim:
            claimName: etc-pihole
        - name: etc-dnsmasq
          persistentVolumeClaim:
            claimName: etc-dnsmasq
        - name: wildcard-dns
          configMap:
            name: wildcard-dns
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
