kubernetes/pihole/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
  labels:
    app.kubernetes.io/instance: pihole
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: pihole
  labels:
    app.kubernetes.io/instance: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: dns
      port: 53
      protocol: UDP
      targetPort: 53
  selector:
    app: pihole
